# face-recognition-python

./: .vercelignore  app.py  face_service.py  preload_model.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
