[project]
name = "face-recognition-python"
version = "1.0.0"
description = "HRMS face embedding API (FastAPI + InsightFace)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
    "numpy>=1.26.4,<3",
    "pillow>=10.4.0",
    "onnxruntime==1.19.2",
    "insightface==0.7.3",
]

[tool.vercel]
entrypoint = "app:app"

[tool.vercel.scripts]
build = "python preload_model.py"
