[project]
name = "face-recognition-python"
version = "1.0.0"
description = "HRMS face embedding API (FastAPI + InsightFace)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
    "numpy>=1.26.4,<3",
    "pillow>=10.4.0",
    "onnxruntime==1.19.2",
    "insightface==0.7.3",
]

# FastAPI entrypoint for Vercel (if you deploy there).
# NOTE: Full InsightFace stack usually exceeds Vercel's 500MB function limit.
# Use Render (render.yaml) for production face recognition.
[tool.vercel]
entrypoint = "app:app"
